# fazerei

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs
tests/: cli.rs
